--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wechat-vue-1.0</title>
+    <title>webchat-vue-1.0</title>
   </head>
   <body>
     <app></app>
