--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>webchat-vue-1.0</title>
-    <link href="static/libs/mui/css/mui.min.css" rel="stylesheet">
+    <link href="static/libs/min/jq.weui.css" rel="stylesheet">
   </head>
   <body>
   <style>
@@ -22,6 +22,7 @@
     <router-view v-bind:transition="transition" v-bind:back-fn="back"
                  v-bind:forward-fn="forward" v-bind:jump-fn="jump"></router-view>
     <!-- built files will be auto injected -->
-    <script src="static/libs/mui/js/mui.min.js"></script>
+  <script src="static/libs/jquery-2.1.4.js"> </script>
+  <script src="static/libs/min/jq.weui.js"></script>
   </body>
 </html>
