--- a/index.html
+++ b/index.html
@@ -12,12 +12,19 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <title>webchat-vue-1.0</title>
     <link href="static/libs/min/jq.weui.css" rel="stylesheet">
+    <style id="default-style">
+      html{font-size: 100px;}
+      .dzz-body-width{width: 320px}
+    </style>
   </head>
   <body>
-  <style>
-    html{font-size: {{size}}px;}
-    .dzz-body-width{width: {{width}}px}
-  </style>
+
+  <div class="weui_mask_transparent"></div>
+  <div class="weui_toast weui_loading_toast weui_toast_visible" style="
+    margin-left: -0.6rem;
+    width: 1.2rem;
+    min-height: 1.2rem;
+  "><div class="weui_loading"><div class="weui_loading_leaf weui_loading_leaf_0"></div><div class="weui_loading_leaf weui_loading_leaf_1"></div><div class="weui_loading_leaf weui_loading_leaf_2"></div><div class="weui_loading_leaf weui_loading_leaf_3"></div><div class="weui_loading_leaf weui_loading_leaf_4"></div><div class="weui_loading_leaf weui_loading_leaf_5"></div><div class="weui_loading_leaf weui_loading_leaf_6"></div><div class="weui_loading_leaf weui_loading_leaf_7"></div><div class="weui_loading_leaf weui_loading_leaf_8"></div><div class="weui_loading_leaf weui_loading_leaf_9"></div><div class="weui_loading_leaf weui_loading_leaf_10"></div><div class="weui_loading_leaf weui_loading_leaf_11"></div></div><p class="weui_toast_content">数据加载中</p></div>
     <!-- 路由外链 -->
     <router-view v-bind:transition="transition" v-bind:back-fn="back"
                  v-bind:forward-fn="forward" v-bind:jump-fn="jump"></router-view>
